[tool.poetry]
name = "yttv"
version = "0.1.0"
description = ""
authors = ["rk0n <rk0n@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
